# cddlconv

./: CHANGELOG.md  Cargo.toml  README.md  flake.nix  release-please-config.json  test.ts
.github/: dependabot.yml  release-please.yml
.github/workflows/: ci.yml  publish.yml
examples/: README.md  array_occurences.cddl  optional_groups.cddl  simple_optional_groups.cddl
examples/rfc-examples/: arrays.cddl  colors.cddl  maps.cddl  prelude_text_types.cddl
examples/webdriver-bidi/: local.cddl  local.ts  remote.cddl  remote.ts  webdriver-bidi.cddl  webdriver-bidi.ts  webdriver-bidi.zod.ts
src/: engines.rs  lib.rs  main.rs  type_script_engine.rs  util.rs
src/engines/: typescript.rs  zod.rs
tests/: typescript.rs  zod.rs
tests/snapshots/: typescript__it_works-2.snap  typescript__it_works.snap  typescript__it_works_with_amendments-2.snap  typescript__it_works_with_amendments.snap  typescript__it_works_with_array_occurences-2.snap  typescript__it_works_with_arrays-2.snap  typescript__it_works_with_arrays.snap  typescript__it_works_with_maps-2.snap  typescript__it_works_with_maps.snap  typescript__it_works_with_optional_groups-2.snap  typescript__it_works_with_optional_groups.snap  typescript__it_works_with_prelude_text_types-2.snap  typescript__it_works_with_simple_optional_groups-2.snap  typescript__it_works_with_simple_optional_groups.snap  zod__it_works-2.snap  zod__it_works.snap  zod__it_works_with_amendments-2.snap  zod__it_works_with_array_occurences-2.snap  zod__it_works_with_maps-2.snap  zod__it_works_with_optional_groups-2.snap  zod__it_works_with_optional_groups.snap  zod__it_works_with_prelude_text_types-2.snap  zod__it_works_with_simple_optional_groups-2.snap  zod__it_works_with_simple_optional_groups.snap
