[package]
name = "cddlconv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Enables generation of vector groups.
vector_groups = []

[dependencies]
anyhow = "1.0.71"
cddl = { git = "https://github.com/anweiss/cddl.git", rev = "c2f8664" }
clap = { version = "4.3.10", features = ["derive"] }
convert_case = "0.6.0"

[dev-dependencies]
insta = "1.31.0"
