[package]
name = "cddlconv"
version = "0.1.6"
edition = "2021"
authors = ["Google Inc"]
description = "A commandline utility for converting CDDL to various formats."
repository = "https://github.com/google/cddlconv/"
license = "Apache-2.0"
keywords = ["cddl", "converter", "parser"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Enables generation of vector groups.
vector_groups = []

[dependencies]
anyhow = "1.0.71"
cddl = "=0.9.4"
clap = { version = "4.3.10", features = ["derive"] }
convert_case = "0.6.0"

[dev-dependencies]
insta = "1.31.0"
