[package]
name = "cddlconv"
version = "0.1.7"
edition = "2021"
authors = ["Google Inc"]
description = "A commandline utility for converting CDDL to various formats."
repository = "https://github.com/google/cddlconv/"
license = "Apache-2.0"
keywords = ["cddl", "converter", "parser"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Enables generation of vector groups.
vector_groups = []

[dependencies]
anyhow = "1.0.99"
cddl = "=0.10.1"
clap = { version = "4.5.47", features = ["derive"] }
convert_case = "0.8.0"

[dev-dependencies]
insta = "1.44.1"
